--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,79 @@
+:root {
+  --soft-red: hsla(7, 99%, 70%, 0.3);
+  --soft-yellow: hsla(51, 100%, 49%, 0.5);
+  --yellow: hsl(51, 100%, 49%);
+  --red: hsla(7, 99%, 70%, 0.6);
+  --dark-desaturated-cyan: hsl(167, 40%, 24%);
+  --dark-blue: hsl(198, 62%, 26%);
+  --dark-moderate-cyan: hsl(168, 34%, 41%);
+  --very-dark-desaturated-blue: hsl(212, 27%, 19%);
+  --very-dark-greyish-blue: hsl(213, 9%, 39%);
+  --dark-greyish-blue: hsl(232, 10%, 55%);
+  --greyish-blue: hsl(210, 4%, 67%);
+  --white: hsl(0, 0%, 100%);
+  --cyan: #95d6c9;
+  --font: "Barlow", sans-serif; }
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
+
+html {
+  box-sizing: 0;
+  font-size: 62.5%; }
+
+body {
+  font-family: var(--font);
+  font-weight: 600; }
+
+.container {
+  display: grid; }
+
 .header {
-  color: navy; }
+  background-image: url(../images/desktop/image-header.jpg);
+  background-size: cover;
+  height: 100vh;
+  padding-top: 3rem; }
+  .header__logo {
+    height: 3rem; }
+  .header__nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 95vw;
+    margin: auto; }
+  .header__links {
+    display: flex;
+    list-style: none;
+    color: #fff;
+    font-weight: 300;
+    font-size: 1.35rem; }
+  .header__link:not(:last-child) {
+    margin-right: 2.5rem; }
+  .header__heading {
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 7.5rem;
+    text-align: center;
+    letter-spacing: 1.75rem;
+    margin: 20vh 10vw 0 10vw; }
+
+.footer {
+  height: 30vh;
+  background-color: var(--dark-desaturated-cyan); }
+
+.gallery {
+  height: 30vh;
+  background-color: var(--greyish-blue); }
+
+.testimonials {
+  height: 50vh;
+  background-color: var(--dark-blue); }
+
+.body {
+  height: 50vh;
+  background-color: var(--red); }
