--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,6 @@
 @import "_base.scss";
+@import "_header.scss";
+@import "_footer.scss";
+@import "_gallery.scss";
+@import "_testimonials.scss";
+@import "_body.scss";
