--- a/css/style.css
+++ b/css/style.css
@@ -22,40 +22,48 @@
   box-sizing: inherit; }
 
 html {
-  box-sizing: 0;
+  box-sizing: border-box;
   font-size: 62.5%; }
 
 body {
   font-family: var(--font);
-  font-weight: 600; }
+  font-weight: 600;
+  color: var(--dark-greyish-blue);
+  line-height: 1.3; }
 
 .container {
   display: grid; }
+
+.heading-2 {
+  color: var(--very-dark-desaturated-blue);
+  font-family: "Fraunces", serif;
+  font-size: 4.5rem;
+  font-weight: 800;
+  width: 40rem; }
 
 .header {
   background-image: url(../images/desktop/image-header.jpg);
   background-size: contain;
   background-position: center;
   height: 100vh;
-  padding-top: 4rem; }
+  padding-top: 4rem;
+  overflow-x: hidden; }
   .header__logo {
     height: 30px;
-    margin-left: 400px;
+    margin-left: 450px;
     margin-top: 15px;
     transform: scale(1.75); }
   .header__nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 95vw;
-    margin: auto; }
+    width: 95vw; }
   .header__links {
     display: flex;
     list-style: none;
     color: #fff;
     font-weight: 300;
-    font-size: 1.75rem;
-    padding-right: 4rem; }
+    font-size: 1.75rem; }
   .header__link:not(:last-child) {
     margin-right: 4.5rem; }
   .header__heading {
@@ -73,7 +81,7 @@ body {
     border-radius: 10rem;
     width: 0.5rem;
     height: 13rem;
-    margin: 12vh 50vw 0 50vw; }
+    margin: 12vh 49vw 0 49vw; }
     .header__arrdown::before {
       content: "";
       display: inline-block;
@@ -110,5 +118,62 @@ body {
   background-color: var(--dark-blue); }
 
 .body {
-  height: 50vh;
-  background-color: var(--red); }
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(3, minmax(max-content, 70rem)); }
+  .body__section--1 {
+    background-color: var(--white);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; }
+  .body__section--2 {
+    background-color: var(--yellow); }
+  .body__section--3 {
+    background-color: var(--red); }
+  .body__section--4 {
+    background-color: var(--white); }
+  .body__section--5 {
+    background-color: var(--dark-moderate-cyan); }
+  .body__section--6 {
+    background-color: var(--cyan); }
+  .body__content {
+    height: 50%;
+    width: 50%;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    align-items: center;
+    justify-content: center;
+    grid-row-gap: 4.5rem; }
+  .body__para {
+    font-size: 1.85rem;
+    text-align: left; }
+  .body__learn-more {
+    margin-top: -5rem;
+    font-weight: 700;
+    font-family: "Fraunces", serif;
+    text-decoration: none;
+    color: var(--very-dark-desaturated-blue);
+    text-transform: uppercase;
+    font-size: 1.6rem;
+    padding-left: 0.4rem;
+    width: max-content; }
+  .body__learn-more::after {
+    content: "";
+    display: block;
+    background-color: rgba(250, 212, 0, 0.3);
+    width: 100%;
+    height: 0.45rem;
+    border-radius: 30%;
+    transition: background-color 0.2s ease; }
+  .body__learn-more:hover::after {
+    content: "";
+    display: block;
+    background-color: #fad400;
+    width: 100%;
+    height: 0.45rem;
+    border-radius: 30%; }
+  .body__image--egg {
+    width: 85%;
+    padding-left: 15rem;
+    padding-top: 5rem; }
