--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -24,15 +24,25 @@
 }
 
 html {
-  box-sizing: 0;
+  box-sizing: border-box;
   font-size: 62.5%;
 }
 
 body {
   font-family: var(--font);
   font-weight: 600;
+  color: var(--dark-greyish-blue);
+  line-height: 1.3;
 }
 
 .container {
   display: grid;
+}
+
+.heading-2 {
+  color: var(--very-dark-desaturated-blue);
+  font-family: "Fraunces", serif;
+  font-size: 4.5rem;
+  font-weight: 800;
+  width: 40rem;
 }
